--- a/Golf1/Base.lproj/Main.storyboard
+++ b/Golf1/Base.lproj/Main.storyboard
@@ -944,6 +944,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="5XR-AV-wgl"/>
         <segue reference="tde-bJ-s6R"/>
-        <segue reference="VSW-It-D9J"/>
+        <segue reference="0Rf-GA-Gjj"/>
     </inferredMetricsTieBreakers>
 </document>
