--- a/Golf1/Base.lproj/Main.storyboard
+++ b/Golf1/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,7 +28,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJm-px-qOi">
-                                <rect key="frame" x="70" y="454" width="246" height="30"/>
+                                <rect key="frame" x="70" y="454" width="235" height="30"/>
                                 <color key="backgroundColor" red="0.81896875388768964" green="0.95016169117025406" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5eT-Xk-lPs"/>
@@ -41,7 +40,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;The most important shot is the next shot&quot;" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTW-yC-adP">
-                                <rect key="frame" x="2" y="321" width="382" height="95"/>
+                                <rect key="frame" x="2" y="321" width="371" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="95" id="syC-tC-KmA"/>
                                 </constraints>
@@ -62,10 +61,10 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2.PNG" translatesAutoresizingMaskIntoConstraints="NO" id="8eK-K8-YV5">
-                                <rect key="frame" x="67" y="61" width="243" height="252"/>
+                                <rect key="frame" x="67" y="61" width="241" height="252"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAf-o7-2Ma">
-                                <rect key="frame" x="70" y="503" width="246" height="30"/>
+                                <rect key="frame" x="70" y="503" width="235" height="30"/>
                                 <color key="backgroundColor" red="0.81896875388768964" green="0.95016169117025406" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="o7H-TU-9vI"/>
@@ -429,13 +428,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Previous Rounds " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oEW-NF-trn">
-                                <rect key="frame" x="109" y="35" width="157" height="26"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <rect key="frame" x="113" y="35" width="150" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npg-rc-I0s">
-                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <rect key="frame" x="0.0" y="74" width="375" height="593"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="5pP-hR-fwn" id="1lX-Qk-XZ7"/>
@@ -443,12 +442,9 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="en1-3i-gEv">
-                                <rect key="frame" x="326" y="20" width="39" height="49"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <state key="normal" title="+"/>
-                                <connections>
-                                    <segue destination="gVR-g9-r4n" kind="show" animates="NO" id="tde-bJ-s6R"/>
-                                </connections>
+                                <rect key="frame" x="267" y="20" width="98" height="49"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Export"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3xj-rl-L5I">
                                 <rect key="frame" x="16" y="29" width="53" height="36"/>
@@ -461,21 +457,18 @@
                         </subviews>
                         <color key="backgroundColor" red="0.94509803921568625" green="0.98039215686274506" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="en1-3i-gEv" secondAttribute="trailing" constant="10" id="3Jl-or-kpT"/>
-                            <constraint firstItem="oEW-NF-trn" firstAttribute="top" secondItem="2dw-Sk-oSV" secondAttribute="bottom" constant="15" id="4lc-hb-AEc"/>
-                            <constraint firstItem="npg-rc-I0s" firstAttribute="leading" secondItem="pan-e2-QjS" secondAttribute="leading" id="7IE-I1-Izr"/>
-                            <constraint firstItem="oEW-NF-trn" firstAttribute="centerX" secondItem="pan-e2-QjS" secondAttribute="centerX" id="FN0-io-Ana"/>
-                            <constraint firstItem="mJM-cd-MGY" firstAttribute="top" secondItem="npg-rc-I0s" secondAttribute="bottom" id="GlH-so-KbH"/>
-                            <constraint firstItem="npg-rc-I0s" firstAttribute="top" secondItem="oEW-NF-trn" secondAttribute="bottom" constant="15" id="IgK-dG-Rfk"/>
-                            <constraint firstAttribute="trailing" secondItem="npg-rc-I0s" secondAttribute="trailing" id="MIX-LE-XA9"/>
-                            <constraint firstAttribute="trailing" secondItem="npg-rc-I0s" secondAttribute="trailing" id="Y0V-XH-t0J"/>
-                            <constraint firstItem="en1-3i-gEv" firstAttribute="leading" secondItem="oEW-NF-trn" secondAttribute="trailing" constant="60" id="eW1-yf-lud"/>
-                            <constraint firstItem="3xj-rl-L5I" firstAttribute="leading" secondItem="pan-e2-QjS" secondAttribute="leadingMargin" id="gby-Fv-tPY"/>
-                            <constraint firstItem="npg-rc-I0s" firstAttribute="centerX" secondItem="pan-e2-QjS" secondAttribute="centerX" id="h7H-Pf-RTN"/>
-                            <constraint firstItem="mJM-cd-MGY" firstAttribute="top" secondItem="npg-rc-I0s" secondAttribute="bottom" id="hVp-Dc-mtS"/>
-                            <constraint firstItem="3xj-rl-L5I" firstAttribute="top" secondItem="2dw-Sk-oSV" secondAttribute="bottom" constant="9" id="jkU-rt-kqx"/>
-                            <constraint firstItem="en1-3i-gEv" firstAttribute="top" secondItem="2dw-Sk-oSV" secondAttribute="bottom" id="pMo-TC-qjd"/>
-                            <constraint firstItem="npg-rc-I0s" firstAttribute="leading" secondItem="pan-e2-QjS" secondAttribute="leading" id="tBg-LS-hrV"/>
+                            <constraint firstItem="npg-rc-I0s" firstAttribute="top" secondItem="en1-3i-gEv" secondAttribute="bottom" constant="5" id="29e-bC-7Lg"/>
+                            <constraint firstItem="en1-3i-gEv" firstAttribute="top" secondItem="2dw-Sk-oSV" secondAttribute="bottom" id="6NF-Oi-GHg"/>
+                            <constraint firstItem="3xj-rl-L5I" firstAttribute="leading" secondItem="pan-e2-QjS" secondAttribute="leadingMargin" id="88n-Ip-KE3"/>
+                            <constraint firstItem="oEW-NF-trn" firstAttribute="centerX" secondItem="npg-rc-I0s" secondAttribute="centerX" id="CBV-nV-rBk"/>
+                            <constraint firstItem="npg-rc-I0s" firstAttribute="leading" secondItem="pan-e2-QjS" secondAttribute="leading" id="FWw-SU-88s"/>
+                            <constraint firstItem="3xj-rl-L5I" firstAttribute="baseline" secondItem="oEW-NF-trn" secondAttribute="baseline" id="Hpw-Pi-Xqh"/>
+                            <constraint firstItem="3xj-rl-L5I" firstAttribute="top" secondItem="2dw-Sk-oSV" secondAttribute="bottom" constant="9" id="Ilm-Km-kko"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="en1-3i-gEv" secondAttribute="trailing" constant="-6" id="JcQ-Sg-NWW"/>
+                            <constraint firstItem="npg-rc-I0s" firstAttribute="top" secondItem="3xj-rl-L5I" secondAttribute="bottom" constant="9" id="X0o-Ss-7MC"/>
+                            <constraint firstAttribute="trailing" secondItem="npg-rc-I0s" secondAttribute="trailing" id="hiB-MO-cZK"/>
+                            <constraint firstItem="npg-rc-I0s" firstAttribute="bottom" secondItem="mJM-cd-MGY" secondAttribute="top" id="jX8-Jg-ufv"/>
+                            <constraint firstItem="en1-3i-gEv" firstAttribute="leading" secondItem="oEW-NF-trn" secondAttribute="trailing" constant="4" id="lE7-UD-iIE"/>
                         </constraints>
                     </view>
                     <connections>
@@ -945,8 +938,7 @@
         <image name="2.PNG" width="494" height="490"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5XR-AV-wgl"/>
-        <segue reference="7KA-CI-V5s"/>
-        <segue reference="0Rf-GA-Gjj"/>
+        <segue reference="awC-Ko-hx5"/>
+        <segue reference="VSW-It-D9J"/>
     </inferredMetricsTieBreakers>
 </document>
